// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> default matches with snapshot 1`] = `
<div
  className="sc-bczRLJ iIxhQh k-Form-Checkbox"
>
  <input
    className="k-Form-Checkbox__input"
    disabled={false}
    id="test-checkbox"
    type="checkbox"
  />
  <label
    className="k-u-weight-400 k-Form-Checkbox__label"
    htmlFor="test-checkbox"
    onClick={[Function]}
    style={Object {}}
  >
    Label
  </label>
</div>
`;

exports[`<Checkbox /> whith label and children props matches with snapshot 1`] = `
<div
  className="sc-bczRLJ iIxhQh k-Form-Checkbox"
>
  <input
    className="k-Form-Checkbox__input"
    disabled={false}
    id="test-checkbox"
    type="checkbox"
  />
  <label
    className="k-u-weight-500 k-Form-Checkbox__label custom-label-className"
    htmlFor="test-checkbox"
    onClick={[Function]}
    style={Object {}}
  >
    Main label
  </label>
  <span
    className="k-u-weight-400 k-Form-Checkbox__content custom-text-className"
    onClick={[Function]}
    style={Object {}}
  >
    Secondary content
  </span>
</div>
`;

exports[`<Checkbox /> with label prop matches with snapshot 1`] = `
<div
  className="sc-bczRLJ iIxhQh k-Form-Checkbox"
>
  <input
    className="k-Form-Checkbox__input"
    disabled={false}
    id="test-checkbox"
    type="checkbox"
  />
  <label
    className="k-u-weight-400 k-Form-Checkbox__label custom-label-className"
    htmlFor="test-checkbox"
    onClick={[Function]}
    style={Object {}}
  >
    Test label
  </label>
</div>
`;
